--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ngx-sitemaps",
 	"version": "0.1.0",
-		"description": "Generate sitemaps from Angular prerendered routes",
+	"description": "Generate sitemaps from Angular prerendered routes",
 	"main": "./src/index.js",
 	"type": "module",
 	"scripts": {
@@ -16,14 +16,16 @@
 	"exports": {
 		".": "./src/index.js"
 	},
-	"bin": "./src/cli.js",
+	"bin": {
+		"ngx-sitemaps": "src/cli.js"
+	},
 	"author": {
 		"name": "Daniel Kimmich",
 		"email": "json-derulo@outlook.com"
 	},
 	"license": "MIT",
 	"repository": {
-		"url": "https://github.com/json-derulo/ngx-sitemaps"
+		"url": "git+https://github.com/json-derulo/ngx-sitemaps.git"
 	},
 	"homepage": "https://json-derulo.github.io/ngx-sitemaps/",
 	"bugs": "https://github.com/json-derulo/ngx-sitemaps/issues",
